--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.11.3",
-    "prettier": "^3.0.3",
     "sequelize": "^6.32.1",
     "ts-node": "^10.9.1",
     "tsc-alias": "^1.8.7",
@@ -50,8 +49,12 @@
     "@types/express": "^4.17.17",
     "@types/node": "^20.5.7",
     "@types/passport-jwt": "^3.0.9",
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "@typescript-eslint/parser": "^6.13.2",
     "concurrently": "^8.2.1",
+    "eslint": "^8.55.0",
     "nodemon": "^3.0.1",
+    "prettier": "^3.1.0",
     "typescript": "^5.2.2"
   }
 }
